--- a/app/index.html
+++ b/app/index.html
@@ -22,69 +22,66 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
         <!-- endbuild -->
     </head>
-    <body class="" ng-app="yoslApp">
-        <div class="" id="wrapper">
+    <body class="" ng-app="yoslApp" ng-controller="menuCtrl">
+        <div class="" id="wrapper" >
             <!-- Sidebar -->
             <nav>
-            <div id="sidebar-wrapper">
-                <ul class="sidebar-nav">
-                    <li class="sidebar-brand ">
-                        <img src='assets/ayb-blue.png' id="img"></img>
-                           <span class="hb">Hacker Base</span>
-                        
-                    </li>
-                    <li>
-                        <a ui-sref="home"><i class="fa fa-leanpub fa-2x fa-fw"></i><span class="menutxt">Boards</span></a>
-                    </li>
-                    <li>
-                        <a href="blogs"><i class="fa fa-keyboard-o fa-2x fa-fw"></i><span class="menutxt">Blogs</span></a>
-                    </li>
-                    <li>
-                        <a href=""><i class="fa fa-globe fa-2x fa-fw"></i><span class="menutxt">Websites</span></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-wechat fa-2x fa-fw"></i><span class="menutxt">IRCs</span></a>
-                    </li>
-                    <li>
-                        <a href="#"><i class="fa fa-trophy fa-2x fa-fw"></i><span class="menutxt">Challenges</span></a>
-                    </li>
-                    <li>
-                        <a ui-sref="addlink"> <i class="fa fa-plus fa-2x fa-fw"></i><span class="menutxt">Add Links</span></a>
-                    </li>
-                    <li data-toggle="collapse" data-target="#service" class="collapsed">
-                        <a href="#"><i class="fa fa-flag fa-2x fa-fw"></i><span class="menutxt">Languages</span><span class="arrow"></span></a>
-                    </li>
-                    <ul class="sub-menu collapse" id="service">
-                        <li>New Service 1</li>
-                        <li>New Service 2</li>
-                        <li>New Service 3</li>
+                <div id="sidebar-wrapper">
+                    <ul class="sidebar-nav">
+                        <li class="sidebar-brand ">
+                            <img src='assets/ayb-blue-220.png' id="img"></img>
+                            <span class="hb">Hacker Base</span>
+                        </li>
+                        <li>
+                            <a ui-sref="home" ng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-2x fa-fw"></i><span class="menutxt">Boards</span></a>
+                        </li>
+                        <li>
+                            <a ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-2x fa-fw"></i><span class="menutxt">Blogs</span></a>
+                        </li>
+                        <li>
+                            <a ui-sref="websites" ng-class="{ active: isActive('/websites')}"><i class="fa fa-globe fa-2x fa-fw"></i><span class="menutxt">Websites</span></a>
+                        </li>
+                        <li>
+                            <a ui-sref="ircs" ng-class="{ active: isActive('/ircs')}"><i class="fa fa-wechat fa-2x fa-fw"></i><span class="menutxt">IRCs</span></a>
+                        </li>
+                        <li>
+                            <a ui-sref="challenges" ng-class="{ active: isActive('/challenges')}"><i class="fa fa-trophy fa-2x fa-fw"></i><span class="menutxt">Challenges</span></a>
+                        </li>
+                        <li>
+                            <a ui-sref="addlink" ng-class="{active: isActive('/addlink')}"> <i class="fa fa-plus fa-2x fa-fw"></i><span class="menutxt">Add Links</span></a>
+                        </li>
+                        <li data-toggle="collapse" data-target="#service" class="collapsed">
+                            <a><i class="fa fa-flag fa-2x fa-fw"></i><span class="menutxt">Languages</span><span class="arrow"></span></a>
+                        </li>
+                        <ul class="sub-menu collapse" id="service">
+                            <li>New Service 1</li>
+                            <li>New Service 2</li>
+                            <li>New Service 3</li>
+                        </ul>
+                        <li>
+                            <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-plus fa-2x fa-fw"></i><span class="menutxt">About</span></a>
+                        </li>
+                        <li>
+                            <a href="" class="fleched" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw" id="menu-toggle" ></i> </a>
+                        </li>
                     </ul>
-                    <li>
-                        <a href="#"><span class="menutxt">About</span></a>
-                    </li>
-                    <li>
-                        <a href="" class="fleched" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw" id="menu-toggle" ></i> </a>
-                    </li>
-                </ul>
-            </div>
+                </div>
             </nav>
             <!-- /#sidebar-wrapper -->
             <!-- Page Content -->
-
-            <div class="ui-view"></div>
-
-
+            <div class="ui-view">
+            </div>
             <!-- /#page-content-wrapper -->
         </div>
         <!-- /#wrapper -->
         <script>
         $("#menu-toggle").click(function(e) {
-        e.preventDefault();
-        $("#wrapper").toggleClass("toggled");
-        $("#wrapper").toggleClass("img");
-        $('#menu-toggle').toggleClass("fa-chevron-right");
-        $('#fl').toggleClass("fleched",false); //faire un if ou
-        $('#fl').toggleClass("fleche",true);
+            e.preventDefault();
+            $("#wrapper").toggleClass("toggled");
+            // $("#wrapper").toggleClass("img");
+            $('#menu-toggle').toggleClass("fa-chevron-right");
+            $('#fl').toggleClass("fleched",false); //faire un if ou
+            $('#fl').toggleClass("fleche",true);
         });
         </script>
         <script>
@@ -124,6 +121,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/menu.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/addlink.js"></script>
         <script src="scripts/controllers/home.js"></script>
