--- a/app/index.html
+++ b/app/index.html
@@ -33,38 +33,38 @@
                             <div class="hb">Hacker Base</div>
                             <div class="hb-small">HB</div>
                         </li>
-                        <li>
-                            <a id="one" ui-sref="home" ng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-2x fa-fw"></i><span class="menutxt">Boards</span></a>
+                        <li id="one">
+                            <a ui-sref="home" ng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-2x fa-fw"></i><span class="menutxt">Boards</span></a>
                         </li>
-                        <li>
-                            <a id="two" ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-2x fa-fw"></i><span class="menutxt">Blogs</span></a>
+                        <li id="two">
+                            <a ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-2x fa-fw"></i><span class="menutxt">Blogs</span></a>
                         </li>
-                        <li>
-                            <a id="three" ui-sref="websites" ng-class="{ active: isActive('/websites')}"><i class="fa fa-globe fa-2x fa-fw"></i><span class="menutxt">Websites</span></a>
+                        <li id="three">
+                            <a ui-sref="websites" ng-class="{ active: isActive('/websites')}"><i class="fa fa-globe fa-2x fa-fw"></i><span class="menutxt">Websites</span></a>
                         </li>
-                        <li>
-                            <a id="four" ui-sref="ircs" ng-class="{ active: isActive('/ircs')}"><i class="fa fa-wechat fa-2x fa-fw"></i><span class="menutxt">IRCs</span></a>
+                        <li id="four">
+                            <a ui-sref="ircs" ng-class="{ active: isActive('/ircs')}"><i class="fa fa-wechat fa-2x fa-fw"></i><span class="menutxt">IRCs</span></a>
                         </li>
-                        <li>
-                            <a id="five" ui-sref="challenges" ng-class="{ active: isActive('/challenges')}"><i class="fa fa-trophy fa-2x fa-fw"></i><span class="menutxt">Challenges</span></a>
+                        <li id="five">
+                            <a ui-sref="challenges" ng-class="{ active: isActive('/challenges')}"><i class="fa fa-trophy fa-2x fa-fw"></i><span class="menutxt">Challenges</span></a>
                         </li>
-                        <li>
-                            <a id="six" ui-sref="addlink" ng-class="{active: isActive('/addlink')}"> <i class="fa fa-plus fa-2x fa-fw"></i><span class="menutxt">Add Links</span></a>
+                        <li id="six">
+                            <a ui-sref="addlink" ng-class="{active: isActive('/addlink')}"> <i class="fa fa-plus fa-2x fa-fw"></i><span class="menutxt">Add Links</span></a>
                         </li>
-                        <li data-toggle="collapse" data-target="#service" class="collapsed">
-                            <a id="seven" ><i class="fa fa-flag fa-2x fa-fw"></i><span class="menutxt">Languages</span><span class="arrow"></span></a>
+                        <li id="seven" data-toggle="collapse" data-target="#service" class="collapsed">
+                            <a><i class="fa fa-flag fa-2x fa-fw"></i><span class="menutxt">Languages</span><span class="arrow"></span></a>
                         </li>
                         <ul class="sub-menu collapse" id="service">
                             <li>New Service 1</li>
                             <li>New Service 2</li>
                             <li>New Service 3</li>
                         </ul>
-                        <li>
-                            <a id="eight" ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-plus fa-2x fa-fw"></i><span class="menutxt">About</span></a>
+                        <li id="eight">
+                            <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-plus fa-2x fa-fw"></i><span class="menutxt">About</span></a>
                         </li>
                         <br>
                         <li class="divider" id="menu-toggle">
-                            <a id="nine" href="" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw fa-2x" id="fleche"  ></i><span class="menutxt">Hide menu</span></a>
+                            <a href="" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw fa-2x" id="fleche"  ></i><span class="menutxt">Hide menu</span></a>
                         </li>
                     </ul>
                 </div>
