--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,6 @@
         <script src="bower_components/jquery/dist/jquery.js"></script>
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="bower_components/videojs/dist/video-js/video-js.css" />
-        <link rel="stylesheet" href="bower_components/flat-ui/dist/css/flat-ui.css" />
         <link rel="stylesheet" href="bower_components/semantic-ui-flag/flag.css" />
         <!-- endbower -->
         <!-- endbuild -->
@@ -25,67 +23,72 @@
     <body class="" ng-app="yoslApp" ng-controller="menuCtrl">
         <div class="" id="wrapper" >
             <!-- Sidebar -->
-                <div id="sidebar-wrapper">
-                    <ul class="sidebar-nav">
-                        <li class="sidebar-brand ">
-                            <img src='assets/ayb-blue-220.png' id="img"/>
-                            <div class="hb">Hacker Base</div>
-                            <div class="hb-small">HB</div>
-                        </li>
-                        <li id="one">
-                            <a ui-sref="home" ng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-lg fa-fw"></i><span class="menutxt">Boards</span></a>
-                        </li>
-                        <li id="two">
-                            <a ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-lg fa-fw"></i><span class="menutxt">Blogs</span></a>
-                        </li>
-                        <li id="three">
-                            <a ui-sref="websites" ng-class="{ active: isActive('/websites')}"><i class="fa fa-globe fa-lg fa-fw"></i><span class="menutxt">Websites</span></a>
-                        </li>
-                        <li id="four">
-                            <a ui-sref="ircs" ng-class="{ active: isActive('/ircs')}"><i class="fa fa-wechat fa-lg fa-fw"></i><span class="menutxt">IRCs</span></a>
-                        </li>
-                        <li id="five">
-                            <a ui-sref="challenges" ng-class="{ active: isActive('/challenges')}"><i class="fa fa-trophy fa-lg fa-fw"></i><span class="menutxt">Challenges</span></a>
-                        </li>
-                        <li id="six">
-                            <a ui-sref="addlink" ng-class="{active: isActive('/addlink')}"> <i class="fa fa-plus fa-lg fa-fw"></i><span class="menutxt">Add Links</span></a>
-                        </li>
-                        <li id="seven">
-                            <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-question fa-lg fa-fw"></i><span class="menutxt">About</span></a>
-                        </li>
+            <div id="sidebar-wrapper">
+                <ul class="sidebar-nav">
+                    <li class="sidebar-brand ">
+                        <img src='assets/ayb-blue-220.png' id="img"/>
+                        <div class="hb">Hacker Base</div>
+                        <div class="hb-small">HB</div>
+                    </li>
+                    <li id="one">
+                        <a ui-sref="home" ng-class="{ active: isActive('/home')}"><i class="fa fa-leanpub fa-lg fa-fw"></i><span class="menutxt">Boards</span></a>
+                    </li>
+                    <li id="two">
+                        <a ui-sref="blogs" ng-class="{ active: isActive('/blogs')}"><i class="fa fa-keyboard-o fa-lg fa-fw"></i><span class="menutxt">Blogs</span></a>
+                    </li>
+                    <li id="three">
+                        <a ui-sref="websites" ng-class="{ active: isActive('/websites')}"><i class="fa fa-globe fa-lg fa-fw"></i><span class="menutxt">Websites</span></a>
+                    </li>
+                    <li id="four">
+                        <a ui-sref="ircs" ng-class="{ active: isActive('/ircs')}"><i class="fa fa-wechat fa-lg fa-fw"></i><span class="menutxt">IRCs</span></a>
+                    </li>
+                    <li id="five">
+                        <a ui-sref="challenges" ng-class="{ active: isActive('/challenges')}"><i class="fa fa-trophy fa-lg fa-fw"></i><span class="menutxt">Challenges</span></a>
+                    </li>
+                    <li id="six">
+                        <a ui-sref="addlink" ng-class="{active: isActive('/addlink')}"> <i class="fa fa-plus fa-lg fa-fw"></i><span class="menutxt">Add Links</span></a>
+                    </li>
+                    <li id="seven">
+                        <a ui-sref="about" ng-class="{active: isActive('/about')}"> <i class="fa fa-question fa-lg fa-fw"></i><span class="menutxt">About</span></a>
+                    </li>
 
 
-                        <!-- Filters menu -->
 
-                        <li id="eight" data-target="#filters" data-toggle="collapse" class="collapsed">
-                            <a href="">
-                                <i class="fa fa-search fa-lg fa-fw"></i><span class="menutxt">Filters </span><span class="caret"></span>
-                            </a>
-                        </li>
-
-
-                        <div id="filters" class="sub-menu collapse" role="menu">
-                            <div class="filter" ng-click="changeLang()">
-                                <a href="">
+                    <!-- Filters menu -->
+                    <li id="eight" data-target="#filters" data-toggle="collapse" class="collapsed">
+                        <a href="">
+                            <i class="fa fa-search fa-lg fa-fw"></i><span class="menutxt">Filters </span><span class="caret"></span>
+                        </a>
+                    </li>
+                    <li id="filters" class="sub-menu collapse" role="menu">
+                        <ul class="">
+                            <li class="dropdown filter">
+                                <a href="" data-toggle="dropdown" role="button">
                                     <i class="fa fa-flag fa-lg fa-fw"></i><span class="menutxt">Language : {{lang}}</span>
                                 </a>
-                            </div>
-
-                            <div class="filter">
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown filter">
                                 <a href=""><i class="fa fa-sort fa-lg fa-fw"></i><span class="menutxt">Sorting order : <i class="fa fa-sort-alpha-asc fa-lg "></i></span></a>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <!-- End filters menu-->
 
-                        <!-- End filters menu-->
 
 
-                        <br>
-                        <li class="" id="menu-toggle">
-                            <a href="" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw fa-lg" id="fleche"  ></i><span class="menutxt">Hide menu</span></a>
-                        </li>
-                    </ul>
-                </div>
 
+                    <br>
+                    <li class="" id="menu-toggle">
+                        <a href="" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw fa-lg" id="fleche"  ></i><span class="menutxt">Hide menu</span></a>
+                    </li>
+                </ul>
+            </div>
             <!-- /#sidebar-wrapper -->
             <!-- Page Content -->
             <div class="ui-view" id="page-content-wrapper">
@@ -95,29 +98,26 @@
         <!-- /#wrapper -->
         <script>
         var toggleMenu = function(){
-            $("#wrapper").toggleClass("toggled");
-            /* $("#wrapper").toggleClass("img");*/
-            $('#fleche').toggleClass("fa-chevron-right");
-            $('#fleche').toggleClass("fa-chevron-left");
-            /*$('#fl').toggleClass("fleched",false); //faire un if ou
-            $('#fl').toggleClass("fleche",true);*/
-            if ($('#filters').hasClass("in")) {
-                $('#filters').collapse("hide");
-            }
+        $("#wrapper").toggleClass("toggled");
+        /* $("#wrapper").toggleClass("img");*/
+        $('#fleche').toggleClass("fa-chevron-right");
+        $('#fleche').toggleClass("fa-chevron-left");
+        /*$('#fl').toggleClass("fleched",false); //faire un if ou
+        $('#fl').toggleClass("fleche",true);*/
+        if ($('#filters').hasClass("in")) {
+        $('#filters').collapse("hide");
+        }
         };
-
         $("#eight").click(function(e) {
-            e.preventDefault();
-            if ($("#wrapper").hasClass("toggled")){
-                toggleMenu();
-            }
+        e.preventDefault();
+        if ($("#wrapper").hasClass("toggled")){
+        toggleMenu();
+        }
         });
-
         $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            toggleMenu();
+        e.preventDefault();
+        toggleMenu();
         });
-
         </script>
         <script>
         (function(i, s, o, g, r, a, m) {
@@ -148,8 +148,6 @@
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-touch/angular-touch.js"></script>
-        <script src="bower_components/videojs/dist/video-js/video.js"></script>
-        <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
